--- a/css/agency.css
+++ b/css/agency.css
@@ -230,9 +230,107 @@ header.masthead .intro-text .intro-heading {
   text-transform: none;
 }
 
+.service-heading-desc {
+	height: 70px;
+}
+
+.service-heading-item {
+	margin: 50px 0 15px 0;
+	text-transform: none;
+	color: #fed136;
+}
+
+.testimonial-quote blockquote {
+	/* Negate theme styles */
+	border: 0;
+	margin: 0;
+	padding: 0;
+	background: none;
+	color: gray;
+	font-family: Georgia, serif;
+	font-size: 1.5em;
+	font-style: italic;
+	line-height: 1.4 !important;
+	margin: 0;
+	position: relative;
+	text-shadow: 0 1px white;
+	z-index: 600;
+}
+
+	.testimonial-quote blockquote * {
+		box-sizing: border-box;
+	}
+
+	.testimonial-quote blockquote p {
+		color: #75808a;
+		line-height: 1.4 !important;
+	}
+
+	.testimonial-quote blockquote p:first-child:before {
+		content: '\201C';
+		color: #fed136;
+		font-size: 7.5em;
+		font-weight: 700;
+		opacity: .3;
+		position: absolute;
+		top: -.4em;
+		left: -.2em;
+		text-shadow: none;
+		z-index: -300;
+	}
+
+.testimonial-quote img {
+	border: 3px solid #9CC1D3;
+	border-radius: 50%;
+	display: block;
+	width: 120px;
+	height: 120px;
+	position: absolute;
+	top: -.2em;
+	left: 0;
+}
+
+.testimonial-quote cite {
+	color: gray;
+	display: block;
+	font-size: .8em;
+}
+
+.testimonial-quote cite span {
+	color: #fed136;
+	font-style: normal;
+	font-weight: 700;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	text-shadow: 0 1px white;
+}
+
+.testimonial-quote {
+	position: relative;
+}
+
+	.testimonial-quote .quote-container {
+		margin-bottom: 50px;
+	}
+
+	.testimonial-quote.right .quote-container {
+		padding-left: 0;
+	}
+
+	.testimonial-quote.right img {
+		left: auto;
+		right: 0;
+	}
+
+	.testimonial-quote.right cite {
+		text-align: right;
+	}
+
+
+
 #portfolio .portfolio-item {
-  right: 0;
-  margin: 0 0 15px;
+	right: 0;
+	margin: 0 0 15px;
 }
 
 #portfolio .portfolio-item .portfolio-link {
