finished portfolio attachments

--- a/css/agency.css
+++ b/css/agency.css
@@ -798,3 +798,39 @@ ul.social-buttons li a {
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
   background-color: #fed136;
 }
+
+.resource-link {
+	height: 100px;
+	width: 100px;
+	background: #eee;
+	border-top: 1px solid transparent;
+	margin: 10px;
+	padding:15px;
+	white-space:nowrap;
+}
+
+.resource-link:hover {
+	background: #e1e1e1;
+	border-top: 1px solid #d0d0d0;
+}
+
+.resource-link img {
+	max-height: 100px;
+	max-width: 100px;
+}
+
+.note {
+	margin-bottom: 0;
+	font-size: smaller;
+	font-style: italic;
+}
+
+.caption {
+	font-style: italic;
+	position: absolute;
+	bottom: 0px;
+	right: 10px;
+	color: black;
+	background: #e1e1e1;
+	padding: 1px 7px;
+}
